--- a/cargo.html
+++ b/cargo.html
@@ -18,6 +18,11 @@
 	<div class="wrapper">
 		<!-- Sidebar  -->
 		<nav id="sidebar">
+			<div class="logotype_box">
+				<a href="index.html">
+					<img src="img/logotype.png" alt="logotype" class="img img-fluid">
+				</a>
+			</div>
 			<ul class="list-unstyled components">
 				<li>
 					<a href="index.html">
