--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 	<div class="wrapper">
 		<!-- Sidebar  -->
 		<nav id="sidebar">
+			<div class="logotype_box">
+				<a href="index.html">
+					<img src="img/logotype.png" alt="logotype" class="img img-fluid">
+				</a>
+			</div>
 			<ul class="list-unstyled components">
 				<li class="active">
 					<a href="#">
@@ -255,7 +260,7 @@
 							</div>
 							<div class="row manager_block">
 								<div class="col-12">
-									<h3 class="block_heading">ВАШ МЕНЕДЖЕР</h4>
+									<h3 class="block_heading">ВАШ МЕНЕДЖЕР</h3>
 								</div>
 								<div class="col-6 manager_left">
 									<div>
@@ -296,7 +301,7 @@
 							</div>
 							<div class="row manager_block">
 								<div class="col-12">
-									<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
+									<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h3>
 								</div>
 								<div class="col-6 manager_left">
 									<div>
@@ -340,15 +345,15 @@
 									<form class="managers_contact_form">
 										<div class="form-check form-check-inline">
 											<input class="form-check-input" type="radio" name="recipientRadio" id="recipientRadio1" value="your_manager">
-											<label class="form-check-label" for="inlineRadio1">Ваш менеджер</label>
+											<label class="form-check-label" for="recipientRadio1">Ваш менеджер</label>
 										</div>
 										<div class="form-check form-check-inline">
 											<input class="form-check-input" type="radio" name="recipientRadio" id="recipientRadio2" value="operational_manager">
-											<label class="form-check-label" for="inlineRadio2">Ваш операційний менеджер</label>
+											<label class="form-check-label" for="recipientRadio2">Ваш операційний менеджер</label>
 										</div>
 										<div class="form-check form-check-inline">
 											<input class="form-check-input" type="radio" name="recipientRadio" id="recipientRadio3" value="company">
-											<label class="form-check-label" for="inlineRadio3">Компанія</label>
+											<label class="form-check-label" for="recipientRadio3">Компанія</label>
 										</div>
 										<div class="form-group user_message_box">
 											<textarea class="form-control" id="userMessage" rows="3"></textarea>
